force-app/main/default/objects/CPQ_Assessment__c/CPQ_Assessment__c.object-meta.xml
<CustomObject>
    <label>CPQ Assessment</label>
    <nameField>
        <label>CPQ Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>