force-app/main/default/objects/CPQ_Assessment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CPQ Assessments</relationshipLabel>
    <relationshipName>CPQ_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>