force-app/main/default/objects/CPQ_Assessment__c/fields/Additional_Approvals_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Approvals_Information__c</fullName>
    <inlineHelpText>To capture any additional unique information about your Approvals process.</inlineHelpText>
    <label>Additional Approvals Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>