force-app/main/default/objects/CPQ_Assessment__c/fields/Additional_General_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_General_Information__c</fullName>
    <inlineHelpText>Any additional general information you would like us to know about your current processes.</inlineHelpText>
    <label>Additional General Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>