force-app/main/default/objects/CPQ_Assessment__c/fields/Additional_Output_Document_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Output_Document_Information__c</fullName>
    <inlineHelpText>To capture any additional unique information about your Output Documents process.</inlineHelpText>
    <label>Additional Output Document Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>