force-app/main/default/objects/CPQ_Assessment__c/fields/Additional_Pricing_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Pricing_Information__c</fullName>
    <inlineHelpText>To capture any additional unique information about your pricing process.</inlineHelpText>
    <label>Additional Pricing Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>