force-app/main/default/objects/CPQ_Assessment__c/fields/Additional_Products_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Products_Information__c</fullName>
    <inlineHelpText>To capture any additional information about your Products processes.</inlineHelpText>
    <label>Additional Products Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>