force-app/main/default/objects/CPQ_Assessment__c/fields/Additional_Project_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Project_Information__c</fullName>
    <inlineHelpText>To capture any additional project overview information.</inlineHelpText>
    <label>Additional Project Information</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>