force-app/main/default/objects/CPQ_Assessment__c/fields/AmendmentProcess__c.field-meta.xml
<CustomField>
    <fullName>AmendmentProcess__c</fullName>
    <inlineHelpText>Do customers need to be able to amend a previously signed contract, or will each quote be independent of previous contracts?</inlineHelpText>
    <label>Amendment Process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>