force-app/main/default/objects/CPQ_Assessment__c/fields/Approval_Email__c.field-meta.xml
<CustomField>
    <fullName>Approval_Email__c</fullName>
    <label>Approval Related Emails</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Approval requests to approver(s)</fullName>
            </value>
            <value>
                <fullName>Allow approvers to approve/reject via email</fullName>
            </value>
            <value>
                <fullName>Notify Quote owner after final approval</fullName>
            </value>
            <value>
                <fullName>Notify Quote owner after any rejection</fullName>
            </value>
            <value>
                <fullName>Notify Quote owner of each approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>