force-app/main/default/objects/CPQ_Assessment__c/fields/Approval_Existing__c.field-meta.xml
<CustomField>
    <fullName>Approval_Existing__c</fullName>
    <label>Existing Approval Tool</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email (Manual)</fullName>
            </value>
            <value>
                <fullName>Chatter and trust</fullName>
            </value>
            <value>
                <fullName>Advanced Approvals</fullName>
            </value>
            <value>
                <fullName>Standard SF approvals - working well</fullName>
            </value>
            <value>
                <fullName>Standard SF approvals - needs improvement</fullName>
            </value>
            <value>
                <fullName>Apttus</fullName>
            </value>
            <value>
                <fullName>Big Machines</fullName>
            </value>
            <value>
                <fullName>No need for approvals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>