force-app/main/default/objects/CPQ_Assessment__c/fields/Approval_Indicators__c.field-meta.xml
<CustomField>
    <fullName>Approval_Indicators__c</fullName>
    <label>Approval Required Indicator Images</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Images at Quote Level</fullName>
            </value>
            <value>
                <fullName>Images at the Quote Line Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>