force-app/main/default/objects/CPQ_Assessment__c/fields/Approval_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Approval_Reasons__c</fullName>
    <inlineHelpText>Document the reasons approvals are needed and who (person or group) is responsible for the approval. Examples: Discount approvals: Sales Rep&apos;s manager if &gt;10%, Director if &gt; 15%.. Payment term other than net 30: Finance...</inlineHelpText>
    <label>Approval Reasons and Approvers</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>