force-app/main/default/objects/CPQ_Assessment__c/fields/Approval_Sequencing__c.field-meta.xml
<CustomField>
    <fullName>Approval_Sequencing__c</fullName>
    <inlineHelpText>Salesforce Advanced Approvals allows approval requests to be sent in parallel. For example, parallel approvals sent to Finance and Legal at the same time could reduce the average time to approve a quote.</inlineHelpText>
    <label>Approval Step Sequencing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Serial - Sent to each approval in sequence</fullName>
            </value>
            <value>
                <fullName>Parallel - Sent to several approvers at the same time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>