force-app/main/default/objects/CPQ_Assessment__c/fields/Assessment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for the prospect to indicate that they have completed the CPQ assessment to the best of their ability</description>
    <inlineHelpText>Please check this box when you feel you have completed the assessment to the best of your ability.</inlineHelpText>
    <label>Assessment Completed</label>
    <type>Checkbox</type>
</CustomField>