force-app/main/default/objects/CPQ_Assessment__c/fields/BusinessProcessImprovementsNeeded__c.field-meta.xml
<CustomField>
    <fullName>BusinessProcessImprovementsNeeded__c</fullName>
    <inlineHelpText>Will this primarily be a technology project, or does the quote to cash business process need to be reviewed and improved?  Please describe major pain points to be addressed.</inlineHelpText>
    <label>Business Process Improvements Needed?</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>