force-app/main/default/objects/CPQ_Assessment__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <inlineHelpText>How are signatures currently gathered?  Who needs to sign (1 or more customer contacts; is an internal counter signature needed)?</inlineHelpText>
    <label>Current Signature Process</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>