force-app/main/default/objects/CPQ_Assessment__c/fields/CZ_Product_Comments__c.field-meta.xml
<CustomField>
    <fullName>CZ_Product_Comments__c</fullName>
    <label>CZ Product Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>