force-app/main/default/objects/CPQ_Assessment__c/fields/Env_AdminInternalFulltime__c.field-meta.xml
<CustomField>
    <fullName>Env_AdminInternalFulltime__c</fullName>
    <inlineHelpText>How many hours do Internal Salesforce Admins currently spend each week making changes to your Salesforce Org.</inlineHelpText>
    <label>Hours per Week Internal Salesforce Admin</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>