force-app/main/default/objects/CPQ_Assessment__c/fields/Env_CurrentQuoteProcess__c.field-meta.xml
<CustomField>
    <fullName>Env_CurrentQuoteProcess__c</fullName>
    <inlineHelpText>Describe how quotes are currently prepared for customers. If there are any tools that are used, please upload an example and include an explanation of how that tool is used.</inlineHelpText>
    <label>Current Quoting Process</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>