force-app/main/default/objects/CPQ_Assessment__c/fields/Env_CurrentQuoteTool__c.field-meta.xml
<CustomField>
    <fullName>Env_CurrentQuoteTool__c</fullName>
    <inlineHelpText>Examples include Apptus, Big Machines, Excel, Salesforce CPQ, etc.</inlineHelpText>
    <label>Current Quoting Tool</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>