force-app/main/default/objects/CPQ_Assessment__c/fields/Env_Offering__c.field-meta.xml
<CustomField>
    <fullName>Env_Offering__c</fullName>
    <label>Saleforce CPQ Products Being Considered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce CPQ</fullName>
            </value>
            <value>
                <fullName>Salesforce Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>