force-app/main/default/objects/CPQ_Assessment__c/fields/Env_ProfilesAndPermissions__c.field-meta.xml
<CustomField>
    <fullName>Env_ProfilesAndPermissions__c</fullName>
    <inlineHelpText>Do your existing profiles and permission need to be reviewed and updated or will we just be extending the existing configuration to cover CPQ related access?</inlineHelpText>
    <label>Profile and Permission Config</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>