force-app/main/default/objects/CPQ_Assessment__c/fields/Env_ServiceCloud__c.field-meta.xml
<CustomField>
    <fullName>Env_ServiceCloud__c</fullName>
    <label>Service Cloud Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not installed, no plans to use</fullName>
            </value>
            <value>
                <fullName>Not installed, but considering for the future</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>