force-app/main/default/objects/CPQ_Assessment__c/fields/How_Are_Your_Products_Sold__c.field-meta.xml
<CustomField>
    <fullName>How_Are_Your_Products_Sold__c</fullName>
    <inlineHelpText>Select one or more methods by which your products are sold</inlineHelpText>
    <label>How Are Products Sold</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Time Fee</fullName>
            </value>
            <value>
                <fullName>Subscription (Recurring Charges)</fullName>
            </value>
            <value>
                <fullName>Usage Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>