force-app/main/default/objects/CPQ_Assessment__c/fields/Level_of_System_Integrator_support__c.field-meta.xml
<CustomField>
    <fullName>Level_of_System_Integrator_support__c</fullName>
    <inlineHelpText>How do you anticipate the Configuration, Development and Migration effort being split between internal and ATG/Cognizant resources.</inlineHelpText>
    <label>Level of System Integrator support</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>