force-app/main/default/objects/CPQ_Assessment__c/fields/Modified_Yesterday__c.field-meta.xml
<CustomField>
    <fullName>Modified_Yesterday__c</fullName>
    <description>Was the record modified today</description>
    <formula>datevalue( LastModifiedDate ) == Today()-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified Yesterday</label>
    <type>Checkbox</type>
</CustomField>