force-app/main/default/objects/CPQ_Assessment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CPQ Assessments</relationshipLabel>
    <relationshipName>CPQ_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>