force-app/main/default/objects/CPQ_Assessment__c/fields/Other_Output_Document_Languages__c.field-meta.xml
<CustomField>
    <fullName>Other_Output_Document_Languages__c</fullName>
    <label>Other Output Document Languages</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>