force-app/main/default/objects/CPQ_Assessment__c/fields/Output_eSign__c.field-meta.xml
<CustomField>
    <fullName>Output_eSign__c</fullName>
    <inlineHelpText>Managed packages exist to streamline the configuration of DocuSign and Adobe Sign (formerly Adobe EchoSign), but other eSignature tools can also be supported.</inlineHelpText>
    <label>Electronic Signature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Needed</fullName>
            </value>
            <value>
                <fullName>Needed - No Preference</fullName>
            </value>
            <value>
                <fullName>Needed - DocuSign</fullName>
            </value>
            <value>
                <fullName>Needed - Adobe Sign (formerly Adobe EchoSign)</fullName>
            </value>
            <value>
                <fullName>Needed- Conga Sign</fullName>
            </value>
            <value>
                <fullName>Needed - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>