force-app/main/default/objects/CPQ_Assessment__c/fields/Output_Languages__c.field-meta.xml
<CustomField>
    <fullName>Output_Languages__c</fullName>
    <inlineHelpText>Select the output document (Quotes, Contracts....) languages. These do not need to match the languages available to your Salesforce users. For example, an English only Salesforce org can be configured to generate Quotes in English and Spanish.</inlineHelpText>
    <label>Languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>