force-app/main/default/objects/CPQ_Assessment__c/fields/Price_Custom__c.field-meta.xml
<CustomField>
    <fullName>Price_Custom__c</fullName>
    <inlineHelpText>Saleforce CPQ supports pricing tables whereby quote fields other than just the product can determine the price. If this sounds beneficial, please describe your use case and ATG will help you leverage this powerful feature.</inlineHelpText>
    <label>Describe Your Pricing</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>