force-app/main/default/objects/CPQ_Assessment__c/fields/Price_DiscForTerm__c.field-meta.xml
<CustomField>
    <fullName>Price_DiscForTerm__c</fullName>
    <inlineHelpText>Do you have products where the price is impacted by the term your customer commits to? If any discounts are calculated and any penalties are applied if the customer cancels early, please describe.</inlineHelpText>
    <label>Describe any Term Discounts</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>