force-app/main/default/objects/CPQ_Assessment__c/fields/Price_DiscForVolume__c.field-meta.xml
<CustomField>
    <fullName>Price_DiscForVolume__c</fullName>
    <inlineHelpText>Do you have any products where the prices are reduced based on increased volume: customers buying 1000 pay less per unit that customers buying 100? Is the volume calculated on each purchase or do previous purchases count toward the discount?</inlineHelpText>
    <label>Describe any Volume Discounts</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>