force-app/main/default/objects/CPQ_Assessment__c/fields/Price_Discretionary__c.field-meta.xml
<CustomField>
    <fullName>Price_Discretionary__c</fullName>
    <inlineHelpText>Are salespeople allowed to apply discretionary discounts? If so, are the discounts applied at the quote level or to specific lines on the quote? Are some products &quot;non-discountable&quot;?</inlineHelpText>
    <label>Describe any Discretionary Discounts</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>