force-app/main/default/objects/CPQ_Assessment__c/fields/Price_MultiCurrency__c.field-meta.xml
<CustomField>
    <fullName>Price_MultiCurrency__c</fullName>
    <inlineHelpText>Do you have multi-currency turned on in your production environment?</inlineHelpText>
    <label>Multi Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No - US Dollars only</fullName>
            </value>
            <value>
                <fullName>No - Other currency only</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>